--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,9 @@ homepage: https://github.com/james-alex/list_utilities
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
+dependencies:
+  meta: ^1.3.0
+
 dev_dependencies:
   collection: ^1.15.0
   pedantic: ^1.11.0
