--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
 name: list_utilities
-description: A collection of basic extension methods for Iterables, Lists, and Sets.
+description: >-
+  A collection of basic extension methods for Iterables, Lists, and Sets;
+  and, a base class for higher-level implementations of List.
 version: 1.0.1
 homepage: https://github.com/james-alex/list_utilities
 
